--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
     "next": "14.2.5",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
